--- a/VirtualPetCare/VirtualPetCare.Service/VirtualPetCare.Service.csproj
+++ b/VirtualPetCare/VirtualPetCare.Service/VirtualPetCare.Service.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.14" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\VirtualPetCare.Core\VirtualPetCare.Core.csproj" />
+    <ProjectReference Include="..\VirtualPetCare.Shared\VirtualPetCare.Shared.csproj" />
   </ItemGroup>
 
 </Project>
